--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "install": "^0.13.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "mongose": "^0.0.2-security",
     "parser": "^0.1.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
   },
