--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "socket.io": "^4.5.4",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
